# easerpc_x

./: CMakeLists.txt  README.md
3rd_osx/lib/: libzmq.5.dylib  libzmq.la
3rd_osx/lib/pkgconfig/: libzmq.pc
callee/: CMakeLists.txt  main.cpp
cmake/: copy_on_debug_helper.cmake
cmake/Modules/: FindZMQ.cmake
easerpc/: CMakeLists.txt  easerpc.cpp  easerpc.h  rpc_client.cpp  rpc_client.h  rpc_common.h  rpc_node.cpp  rpc_node.h
easerpc/test/: broker.cpp  client.cpp  simple_pthread.cpp  worker.cpp
easerpc/util/: cJSON_test.c  platform-nix.c  platform-windows.c  platform.h  threading-windows.c
